kubernetes/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-backend
  namespace: ecommerce

spec:
  selector:
    app: ecommerce-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
