kubernetes/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-backend
  namespace: ecommerce

spec:
  ingressClassName: nginx

  rules:
    - host: ecommerce.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: ecommerce-backend

                port:
                  number: 80
